# BlockBox

./: Cargo.toml  blockbox.sh  package-lock.json  package.json
.cargo/: .npmrc  config.toml  credentials.toml
mi-proyecto-nuevazo/: database_config.yml
src/: cli.rs  main.rs
src/project/: generator.rs  mod.rs
src/templates-backend/crud/: parse-server.ts
src/utils/: file.rs
