[package]
name = "blockbox"
version = "0.1.0"
authors = ["jon nahuel pereyra jonnahuel78@gmail.com","alan abel pereyra alanabel322@gmail.com"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
mongodb = "2.0"

[registry]
publish = ["github"]